--- a/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
+++ b/frontend/home-delivery/src/app/shared/layouts/sidebar/sidebar.html
@@ -1,164 +1,164 @@
 <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+<ul [class.toggled]="toggled" class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">Home Delivery <sup>2</sup></div>
-            </a>
+    <!-- Sidebar - Brand -->
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+        <div class="sidebar-brand-icon rotate-n-15">
+            <i class="fas fa-laugh-wink"></i>
+        </div>
+        <div class="sidebar-brand-text mx-3">Home Delivery <sup>2</sup></div>
+    </a>
 
-            <!-- Divider -->
-            <hr class="sidebar-divider my-0">
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
 
-            <!-- Nav Item - Dashboard -->
-             @if(isAdmin())
-             {
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
-            </li>
+    <!-- Nav Item - Dashboard -->
+    @if(isAdmin())
+    {
+    <li class="nav-item">
+        <a class="nav-link" href="index.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span></a>
+    </li>
 
-              <!-- Divider -->
-            <hr class="sidebar-divider">
-                        <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-cart-plus"></i>
-                    <span>Orders</span></a>
-            </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+    <!-- Nav Item - Charts -->
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-cart-plus"></i>
+            <span>Orders</span></a>
+    </li>
 
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-cutlery"></i>
-                    <span>Stores / Restaurants</span></a>
-            </li>
+    <!-- Nav Item - Tables -->
+    <li class="nav-item">
+        <a class="nav-link" href="tables.html">
+            <i class="fas fa-fw fa-cutlery"></i>
+            <span>Stores / Restaurants</span></a>
+    </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-bars"></i>
-                    <span>Products</span></a>
-            </li>
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-bars"></i>
+            <span>Products</span></a>
+    </li>
 
-             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-truck"></i>
-                    <span>Delivery Management</span></a>
-            </li>
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-truck"></i>
+            <span>Delivery Management</span></a>
+    </li>
 
-             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-users"></i>
-                    <span>Customers</span></a>
-            </li>
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-users"></i>
+            <span>Customers</span></a>
+    </li>
 
-             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-user"></i>
-                    <span>Users & Roles</span></a>
-            </li>
-             }
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-user"></i>
+            <span>Users & Roles</span></a>
+    </li>
+    }
 
-     @if(isCustomer())
-             {
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
-            </li>
+    @if(isCustomer())
+    {
+    <li class="nav-item">
+        <a class="nav-link" href="index.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span></a>
+    </li>
 
-              <!-- Divider -->
-            <hr class="sidebar-divider">
-                        <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-cart-plus"></i>
-                    <span>Orders</span></a>
-            </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+    <!-- Nav Item - Charts -->
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-cart-plus"></i>
+            <span>Orders</span></a>
+    </li>
 
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-cutlery"></i>
-                    <span>Stores / Restaurants</span></a>
-            </li>
+    <!-- Nav Item - Tables -->
+    <li class="nav-item">
+        <a class="nav-link" href="tables.html">
+            <i class="fas fa-fw fa-cutlery"></i>
+            <span>Stores / Restaurants</span></a>
+    </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-bars"></i>
-                    <span>Products</span></a>
-            </li>
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-bars"></i>
+            <span>Products</span></a>
+    </li>
 
-               <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-shopping-cart"></i>
-                    <span>Cart</span></a>
-            </li>
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-shopping-cart"></i>
+            <span>Cart</span></a>
+    </li>
 
-                 <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-address-card"></i>
-                    <span>Address</span></a>
-            </li>
-
-
-             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-user"></i>
-                    <span>Profile</span></a>
-            </li>
-             }
-
-          
-              @if(isDelivery())
-             {
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
-            </li>
-
-              <!-- Divider -->
-            <hr class="sidebar-divider">
-                        <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-cart-plus"></i>
-                    <span>Assigned Orders</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-truck"></i>
-                    <span>Active Delivery</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-map-marker"></i>
-                    <span>Navigation</span></a>
-            </li>
-
-               <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-usd"></i>
-                    <span>Earnings</span></a>
-            </li>
+    <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/customer/address']">
+            <i class="fas fa-fw fa-address-card"></i>
+            <span>Address</span></a>
+    </li>
 
 
-             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-user"></i>
-                    <span>Profile</span></a>
-            </li>
-             }
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-user"></i>
+            <span>Profile</span></a>
+    </li>
+    }
 
-            <!-- Nav Item - Pages Collapse Menu -->
-<!--             <li class="nav-item">
+
+    @if(isDelivery())
+    {
+    <li class="nav-item">
+        <a class="nav-link" href="index.html">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>Dashboard</span></a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+    <!-- Nav Item - Charts -->
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-cart-plus"></i>
+            <span>Assigned Orders</span></a>
+    </li>
+
+    <!-- Nav Item - Tables -->
+    <li class="nav-item">
+        <a class="nav-link" href="tables.html">
+            <i class="fas fa-fw fa-truck"></i>
+            <span>Active Delivery</span></a>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-map-marker"></i>
+            <span>Navigation</span></a>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-usd"></i>
+            <span>Earnings</span></a>
+    </li>
+
+
+    <li class="nav-item">
+        <a class="nav-link" href="charts.html">
+            <i class="fas fa-fw fa-user"></i>
+            <span>Profile</span></a>
+    </li>
+    }
+
+    <!-- Nav Item - Pages Collapse Menu -->
+    <!--             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
@@ -172,8 +172,8 @@
                 </div>
             </li> -->
 
-            <!-- Nav Item - Utilities Collapse Menu -->
-<!--             <li class="nav-item">
+    <!-- Nav Item - Utilities Collapse Menu -->
+    <!--             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
@@ -190,11 +190,11 @@
                 </div>
             </li> -->
 
-            <!-- Divider -->
-         <!--    <hr class="sidebar-divider"> -->
+    <!-- Divider -->
+    <!--    <hr class="sidebar-divider"> -->
 
-            <!-- Nav Item - Pages Collapse Menu -->
- <!--            <li class="nav-item">
+    <!-- Nav Item - Pages Collapse Menu -->
+    <!--            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
                     aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
@@ -213,10 +213,8 @@
                 </div>
             </li>
  -->
-     
 
-            <!-- Divider -->
-           <!--  <hr class="sidebar-divider d-none d-md-block"> -->
 
-        </ul>
-        <!-- End of Sidebar -->
+
+</ul>
+<!-- End of Sidebar -->
